--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,16 +1,17 @@
-<ion-header>
-  <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>Tobias Café & Bar</ion-title>
-  </ion-navbar>
-</ion-header>
 
-<ion-content padding>
-  <h3>Insira o número da mesa</h3>
 
- 
+<ion-content padding>    
+  <img src="assets/imgs/tela-inicial.jpg" alt="logo">
+  <h3>Insira o Número do Cliente</h3>
 
-  <button ion-button secondary menuToggle>Entrar</button>
+  <form>
+    <ion-item>
+      <ion-label floating>Número</ion-label>
+      <ion-input></ion-input>
+    </ion-item>
+
+        <button ion-button block >Entrar</button>
+
+  </form>
+
 </ion-content>
